<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sign in</string>
    <string name="nav_header_subtitle">Login with WeChat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_widgets">Widgets</string>
    <string name="menu_color">color</string>
    <string name="menu_prime">prime</string>
    <string name="menu_lock">lock</string>
    <string name="menu_settings">settings</string>
    <string name="menu_about">about</string>
    <string name="menu_message">help</string>
</resources>
