<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_widgets"
            android:icon="@drawable/ic_menu_widgets"
            android:title="@string/menu_widgets" />
        <item
            android:id="@+id/nav_color"
            android:icon="@drawable/ic_menu_color"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/nav_prime"
            android:icon="@drawable/ic_menu_prime"
            android:iconTint="@color/colorYellow"
            android:title="@string/menu_prime" />
    </group>

    <group>
        <item
            android:id="@+id/nav_lock"
            android:icon="@drawable/ic_menu_lock"
            android:title="@string/menu_lock" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/menu_message" />
    </group>

</menu>
